--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 		"jorenvanhocht/laravel-share": "^4.2",
 		"laravel/framework": "^10.10",
 		"laravel/sanctum": "^3.3",
+		"laravel/socialite": "^5.13",
 		"laravel/tinker": "^2.8",
 		"livewire/livewire": "^3.4",
 		"qirolab/laravel-reactions": "^2.8",
